--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build the mod pwease >~<
+      - name: Build the mod pwease >~< uwu
         uses: RoootTheFox/build-geode-mod@main
         with:
           combine: true
