--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -37,8 +37,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build the mod
-        uses: RoootTheFox/build-geode-mod@main
+        uses: geode-ios/build-geode-mod@main
         with:
+          bindings: 'RoootTheFox/geode-bindings'
+          bindings-ref: 'uhhmmuhhhh'
           combine: true
           target: ${{ matrix.config.target }}
 
@@ -48,7 +50,7 @@ jobs:
     needs: ['build']
 
     steps:
-      - uses: RoootTheFox/build-geode-mod/combine@main
+      - uses: geode-ios/build-geode-mod/combine@main
         id: build
 
       - uses: actions/upload-artifact@v4
