--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -33,10 +33,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build the mod
-        uses: geode-sdk/build-geode-mod@main
+        uses: geode-catgirls/build-geode-mod@test
         with:
           combine: true
           target: ${{ matrix.config.target }}
+          cli: nightly
 
   package:
     name: Package builds
@@ -44,7 +45,7 @@ jobs:
     needs: ['build']
 
     steps:
-      - uses: geode-sdk/build-geode-mod/combine@main
+      - uses: geode-catgirls/build-geode-mod/combine@main
         id: build
 
       - uses: actions/upload-artifact@v4
