--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -17,6 +17,10 @@ jobs:
 
         - name: macOS
           os: macos-latest
+        
+        - name: iOS
+          os: macos-latest
+          target: iOS
 
         - name: Android32
           os: ubuntu-latest
@@ -38,6 +42,7 @@ jobs:
           combine: true
           target: ${{ matrix.config.target }}
           cli: nightly
+          sdk: 4.2.1
 
   package:
     name: Package builds
