--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -50,7 +50,7 @@ jobs:
     needs: ['build']
 
     steps:
-      - uses: geode-catgirls/build-geode-mod/combine@main
+      - uses: geode-catgirls/build-geode-mod/combine@test
         id: build
 
       - uses: actions/upload-artifact@v4
