--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -17,7 +17,7 @@ jobs:
 
         - name: macOS
           os: macos-latest
-        
+
         - name: iOS
           os: macos-latest
           target: iOS
@@ -37,12 +37,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build the mod
-        uses: geode-catgirls/build-geode-mod@test
+        uses: geode-sdk/build-geode-mod@main
         with:
           combine: true
           target: ${{ matrix.config.target }}
-          cli: nightly
-          gh-pat: ${{ secrets.GH_PAT }}
+          cli: ${{ matrix.config.cli != null && matrix.config.cli || '' }}
 
   package:
     name: Package builds
@@ -50,7 +49,7 @@ jobs:
     needs: ['build']
 
     steps:
-      - uses: geode-catgirls/build-geode-mod/combine@test
+      - uses: geode-sdk/build-geode-mod/combine@main
         id: build
 
       - uses: actions/upload-artifact@v4
