--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -18,6 +18,10 @@ jobs:
         - name: macOS
           os: macos-latest
 
+        - name: iOS
+          os: macos-latest
+          target: iOS
+
         - name: Android32
           os: ubuntu-latest
           target: Android32
@@ -37,6 +41,8 @@ jobs:
         with:
           combine: true
           target: ${{ matrix.config.target }}
+          cli: nightly
+          sdk: nightly
 
   package:
     name: Package builds
