fix: temporarily use nightly/v5 sdk
Signed-off-by: rooot <hey@rooot.gay>

--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           combine: true
           target: ${{ matrix.config.target }}
+          sdk: v5
 
   package:
     name: Package builds
